--- a/sass/blocks/_crumbs.sass
+++ b/sass/blocks/_crumbs.sass
@@ -38,7 +38,7 @@
   padding-bottom: 25px
   width: 840px
   margin: 0 auto
-
+  padding-top: 30px
 .faq-breadcrumbs-faq-item
   font-family: 'Roboto', sans-serif
   font-weight: 400
