--- a/sass/blocks/_content.sass
+++ b/sass/blocks/_content.sass
@@ -1,124 +1,76 @@
-.content
-  padding-top: 50px
-  &-block
-    width: 840px
-    margin: 0 auto
-    &__text > p
-      margin-bottom: 20px
-    &__image
-      margin-bottom: 32px
-      width: 840px
-      margin: 0 auto
-      padding-bottom: 32px
-      img
-        width: 100%
-    &__subtitle
-      +bold
-      font-size: 24px
-      line-height: 32px
-      color: #000
-      margin-bottom: 32px
-      display: block
-      width: 840px
-      margin: 0 auto
-      padding-bottom: 10px
-    &__document
-      display: flex
-      flex-direction: row
-      align-items: center
-      span
-        font-family: 'Roboto', sans-serif
-        font-weight: 400
-        font-size: 16px
-        line-height: 24px
-        color: #00B2A9
-    &__icon
-      margin-right: 20px
-    &__images
-      display: flex
-      flex-direction: row
-      justify-content: space-between
-      width: 840px
-      margin: 0 auto
-      margin-bottom: 32px
-    &__question
-      margin-top: 55px
-    &__btns
-      display: flex
-      flex-direction: row
-    &__name
-      +bold
-      font-size: 24px
-      line-height: 32px
-      color: #000
-      margin-bottom: 25px
-    &__btn
-      padding: 16px 20px
-      border: 1px solid #009839
-      color: #009839
-      font-family: 'Roboto', sans-serif
-      font-weight: 400
-      font-size: 16px
-      line-height: 24px
-      border-radius: 4px
-      margin-right: 25px
-      &:last-child
-        margin-right: 0
-    &__text
-      width: 840px
-      margin: 0 auto
-.link
-  display: flex
+
+.article
   width: 840px
   margin: 0 auto
-  padding-bottom: 40px
-.faq-content
-  font-family: 'Roboto', sans-serif
-  font-weight: 400
-  font-style: normal
-  font-size: 16px
-  line-height: 24px
-  color: #000
-  width: 840px
-  margin: 0 auto
-  padding-bottom: 20px
-  h1
+  p
+    font-family: 'Roboto', sans-serif
+    font-weight: 400
+    font-style: normal
+    font-size: 16px
+    line-height: 24px
+    color: #000
+    margin-bottom: 20px
+  h2
     +bold
+    font-size: 32px
+    line-height: 40px
+    color: #000
+    margin-bottom: 50px
+    margin-top: 30px
+  > img
+    width: 100%
+  a img
+    width: 50px
+    margin-right: 20px
+  a
+    display: flex
+    flex-direction: row
+    align-items: center
+    text-decoration: none
+    font-family: 'Roboto', sans-serif
+    font-weight: 400
+    font-size: 16px
+    line-height: 24px
+    color: #009839
+    margin-bottom: 30px
+    margin-top: 30px
+  h3
+    +bold
+    font-size: 24px
+    line-height: 32px
+    margin-bottom: 30px
+    margin-top: 30px
+  button
+    border: none
+    cursor: pointer
+.img
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  margin-bottom: 30px
+.w-50
+  width: 45% 
+
 
 @media (max-width: 1050px)
-  .content-block__subtitle
-    width: 90%
   .faq-content
     width: 90%
   .faq-useful-section
     width: 90%
   .faq-other-section
     width: 90%
-  .content-block
+  .article
     width: 90%
-  .content-block__image
-    width: 90%
-    margin: 0 auto
-    padding-bottom: 40px
-    padding-top: 20px
-  .content-block__text
-    width: 90%
-  .link
-    width: 90%
-
 
 @media (max-width: 800px)
-  .content-block__images
+  .img
     flex-direction: column
     margin-bottom: 0
-    width: 90%
-    img
-      width: 100%
-  .content-block__pic
     width: 100%
-  .content-block__pic > img
-    margin-bottom: 20px
-  .faq-heading
+    img
+      width: 100% !important
+      margin-bottom: 10px
+  .article h2
     font-size: 30px
     line-height: 40px
 
@@ -128,12 +80,21 @@
     line-height: 30px
 
 @media (max-width: 500px)
-  .content-block__text p
-    font-size: 14px
-    line-height: 20px
-  .faq-heading
+  .article h2
     font-size: 21px
     line-height: 24px
+    margin-bottom: 20px
+  .article p
+    font-size: 14px
+    line-height: 22px
+  .article h3
+    font-size: 18px
+    line-height: 24px
+    margin-bottom: 15px
+    margin-top: 15px
+  .article a span
+    font-size: 14px
+    line-height: 20px
   .faq-useful-section
     text-align: center
   .button
@@ -148,5 +109,3 @@
   .faq-useful-section-button-no
     font-size: 16px
     line-height: 24px
-  .text60
-    margin-bottom: 30px !important
