--- a/sass/blocks/_content.sass
+++ b/sass/blocks/_content.sass
@@ -19,6 +19,9 @@
     margin-top: 30px
   > img
     width: 100%
+    margin-top: 20px
+    margin-bottom: 20px
+    display: block
   a img
     width: 50px
     margin-right: 20px
@@ -48,6 +51,7 @@
   flex-direction: row
   justify-content: space-between
   margin-bottom: 30px
+  margin-top: 20px
 .w-50
   width: 45% 
 
