--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -42,7 +42,7 @@
   .faq-common-section-items-item-more:hover::after
     transform: translateX(5px)
     transition: 0.3s
-  .faq-actual-section-items li:hover::after
+  .faq-actual-section-item:hover::after
     opacity: 0
-  .faq-actual-section-items li:hover::before
+  .faq-actual-section-item:hover::before
     opacity: 1
