--- a/sass/blocks/_search.sass
+++ b/sass/blocks/_search.sass
@@ -12,6 +12,7 @@
   background-image: url(https://faq-plus.ru/media/search-icon.svg)
   background-repeat: no-repeat
   background-position: 17px 15px
+  border-radius: 4px
   
 
 .faq-search-form::before
@@ -83,7 +84,7 @@
   font-weight: 400
   font-size: 18px
   line-height: 28px
-  color: #10002B
+  color: #747E89
   margin-top: 36px
   margin-left: 25px
 .faq-search-form-no-results-comment
