--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -2,6 +2,7 @@
   margin: 0
   padding: 0
   outline: none !important
+$maincolor: #009839
 .button
   color: #fff
   font-family: 'Roboto', sans-serif
@@ -9,7 +10,7 @@
   font-size: 16px
   line-height: 24px
   padding: 16px 20px
-  background-color: #009839
+  background-color: $maincolor
   border-radius: 4px
   display: inline-block
 .faq-main
@@ -31,17 +32,12 @@
     &::-webkit-scrollbar-thumb
       background-color: #d6d6d6
       border-radius: 3px
-  .faq-actual-section-item:hover
-    transition: 0.3s
-    color: #009839
-    fill: #009839
-  .faq-other-section-item:hover
-    transition: 0.3s
-    color: #009839
-    fill: #009839
   .faq-common-section-items-item-more:hover::after
     transform: translateX(5px)
     transition: 0.3s
+  .faq-actual-section-item:hover
+    transition: 0.3s
+    color: $maincolor
   .faq-actual-section-item:hover::after
     opacity: 0
   .faq-actual-section-item:hover::before
