--- a/sass/blocks/_actual.sass
+++ b/sass/blocks/_actual.sass
@@ -8,8 +8,8 @@
   +bold
   font-size: 32px
   line-height: 40px
+  margin-bottom: 40px
 .faq-actual-section-items
-  margin-top: 32px
   list-style: none
 .faq-actual-section-items li
   margin-bottom: 30px
@@ -21,7 +21,7 @@
   line-height: 32px
   color: #000
   transition: 0.3s
-  margin-bottom: 30px
+  margin-bottom: 48px
   width: 100%
   display: block
   position: relative
@@ -117,7 +117,7 @@
     color: #6A6A6A
 .faq-footer-form-submit
   padding: 16px 20px 16px 20px
-  background-color: #009839
+  background-color: $maincolor
   border-radius: 4px
   border: none
   margin-top: 40px
@@ -143,7 +143,7 @@
   line-height: 32px
   margin-bottom: 20px
 .faq-useful-section-button-yes
-  border: 1px solid #009839
+  border: 1px solid $maincolor
   cursor: pointer
   border-radius: 4px
   padding: 16px 20px 16px 20px
@@ -152,10 +152,10 @@
   font-weight: 400
   font-size: 16px
   line-height: 24px
-  color: #009839
+  color: $maincolor
   background-color: #fff
 .faq-useful-section-button-no
-  border: 1px solid #009839
+  border: 1px solid $maincolor
   cursor: pointer
   border-radius: 4px
   padding: 16px 20px 16px 20px
@@ -163,7 +163,7 @@
   font-weight: 400
   font-size: 16px
   line-height: 24px
-  color: #009839
+  color: $maincolor
   background-color: #fff
 .faq-other-section
   padding-top: 100px
