--- a/sass/blocks/_content.sass
+++ b/sass/blocks/_content.sass
@@ -34,7 +34,7 @@
     font-weight: 400
     font-size: 16px
     line-height: 24px
-    color: #009839
+    color: $maincolor
     margin-bottom: 30px
     margin-top: 30px
   h3
