--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -13,6 +13,7 @@ $maincolor: #009839
   background-color: $maincolor
   border-radius: 4px
   display: inline-block
+  margin-bottom: 20px
 .faq-main
   padding-top: 40px
 
