--- a/sass/blocks/_actual.sass
+++ b/sass/blocks/_actual.sass
@@ -217,10 +217,11 @@
     display: flex
     flex-direction: column
     input
-      width: 97%
+      width: 93%
       padding: 18px 10px 18px 10px
     textarea
       flex-basis: 120px
+      width: 94%
 
 @media (max-width: 550px)
   .faq-other-section-item
@@ -244,6 +245,8 @@
     flex-direction: column
   .faq-actual-section
     padding-top: 50px
+  .faq-actual-section > div
+    margin-top: 50px
 
 @media (max-width: 425px)
   .faq-actual-section-item::after
